--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -5,7 +5,7 @@
 } 
 
 body {
-    background:url(https://raw.githubusercontent.com/harryczqp/images/master/20201022231440.png);//图片路径
+    background:url(http://mrcaozq.gitee.io/images/img/20210104084607.png);//图片路径
     background-repeat: no-repeat;//是否重复平铺
     background-attachment:fixed;//是否随着网页上下滚动而滚动，fixed为固定
     background-position:50% 50%;//图片位置
